# System

./: .gitignore  .qmlls.ini  Cargo.toml  build.rs  flake.nix  justfile
src/: colorscheme.rs  hardware.rs  lib.rs  weather.rs
