[package]
name = "system"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
cxx = "1.0"
cxx-qt = "0.9"
cxx-qt-lib = { version = "0.9", features = ["qt_gui", "qt_qml"] }
gfxinfo = "0.1"
sysinfo = "0.33"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1"
once_cell = "1.19"

[build-dependencies]
cxx-qt-build = { version = "0.9", features = ["link_qt_object_files"] }

